# djangoCRM

./: .gitignore  README.md  pyproject.toml
app/authenticate/: admin.py  models.py  serializers.py  urls.py  views.py
app/company/: models.py  permissions.py  serializers.py  urls.py  views.py
app/core/: settings.py  urls.py
app/sale/: admin.py  models.py  serializers.py  urls.py  views.py
app/supply/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
